feat: enhance message handling with new types and improved serialization